# clashero

./: .gitignore  .gitmodules  BCF_INTEGRATION.md  CLAUDE.md  LICENSE  README.md  docker-compose.yml
.github/workflows/: ci.yml  clash-ci.yml  release.yml
clash/: .env  .gitignore  .output.txt  Cargo.toml  Dockerfile  ralph.sh
clash/.github/workflows/: ci.yml
clash/.junie/commands/: dev-plan.md  hitl.md
clash/.junie/memory/: feedback.md  language.json
clash/src/: bcf_reporter.rs  clash_engine.rs  ifc_adapter.rs  lib.rs  main.rs  selector.rs
clash/tests/: bcf_reporter_tests.rs  clash_detect_tests.rs  clash_engine_tests.rs  cli_tests.rs  ifc_adapter_tests.rs  test_clash_set.json  test_ifc_adapter.rs  viewpoint_tests.rs
db/: clashero.db  clashero.db-shm  clashero.db-wal  db.json  init.sql  seed.sql
db.bak/: clashero.db-wal
db/migrations/: 001_multi_tenant_auth.sql  002_auth0_orgs.sql
mcp-server/: package-lock.json  package.json
mcp-server/src/: index.ts
skills/clash-cli/: SKILL.md
tests/: hvac.bcfzip
web/: .gitignore  SPEC.md  next.config.ts  package-lock.json  package.json  server.js
web/app/: globals.css  layout.tsx  page.tsx
web/components/: bcf-create-dialog.tsx  bubble-context-menu.tsx  clash-detail.tsx  display-options-panel.tsx  ifc-viewer.tsx  issue-group.tsx  issue-row.tsx  model-manager.tsx  status-icon.tsx  theme-provider.tsx  topbar.tsx
web/lib/: auth.ts  auth0.ts  bcf-exporter.ts  bcf-parser.ts  crypto.ts  dalux.ts  db.ts  dummy-clashes.ts  linear.ts  postgres.ts  tenant-context.ts  tenant-store.ts  types.ts  utils.ts
(+52 files in other folders)
